# cpe_backend

./: .env_template  .gitignore  Cargo.toml  README.md  backup_file.sql
src/: main.rs
src/api/: check_session.rs  create_user.rs  excel_search_absent.rs  excel_search_pass.rs  get_exam_session_info.rs  lib.rs  login.rs  mod.rs  search_absent_and_excused.rs  student_id_search.rs
src/api/create/: add_exam.rs  get_exam_score_template.rs  get_scholarship_template.rs  get_students_info_template.rs  mod.rs  mutiple_add_exam_score.rs  mutiple_add_scholarship.rs  mutiple_add_student_info.rs  single_add_exam_score.rs  single_add_student.rs
src/api/delete/: delete_exam_info.rs  delete_exam_score.rs  delete_scholarship.rs  delete_scholarship_records.rs  delete_student.rs  delete_student_info.rs  mod.rs
src/api/modify/: mod.rs  modify_exam_info.rs  modify_exam_score.rs  modify_student_info.rs  update_exam_score.rs  update_scholarship.rs
src/api/query/: claimed_scholarship_excel.rs  claimed_scholarship_json.rs  excel_search_absent.rs  excel_search_pass.rs  get_exam_session_info.rs  mod.rs  query_exam_info.rs  query_passed_by_year.rs  query_scholarship_excel.rs  query_score_info.rs  scholarship_query_json.rs  search_absent_and_excused.rs  student_id_search.rs  unclaimed_scholarship.rs  unclaimed_scholarship_json.rs
uploads/: claimed_scholarship.xlsx  delete_scholarship.xlsx  exam_score.xlsx  exam_score_excel.xlsx  exam_score_template.xlsx  modify_exam_score.xlsx  result_file.xlsx  scholarship.xlsx  scholarship_result.xlsx  scholarship_template.xlsx  students_info.xlsx  students_info_template.xlsx  temp_file.xlsx  unclaimed_scholarship.xlsx
