[package]
name = "cpe_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
actix-cors = "0.7.0"
actix-session = { version = "0.10.1", features = ["redis-session"] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15"
serde = { version = "1.0.217", features = ["derive"] }
bcrypt = "0.16.0"
redis = "0.27.6"
tokio = { version = "1.42.0", features = ["full"] }
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
actix-multipart = "0.7.2" 
futures-util = "0.3.31"